# code

.claude/: settings.json
.github/workflows/: android-ci.yml
mcsr-ranked-app/: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
mcsr-ranked-app/public/: sw.js
mcsr-ranked-app/release/: MCSR-Ranked-Explorer-v1.0.0-debug.apk  MCSR-Ranked-Explorer-v1.1.0-debug.apk  MCSR-Ranked-Explorer-v1.2.0-debug.apk  MCSR-Ranked-Explorer-v1.3.0-debug.apk  MCSR-Ranked-Explorer-v1.3.1-debug.apk  MCSR-Ranked-Explorer-v1.3.2-debug.apk  MCSR-Ranked-Explorer-v1.3.3-debug.apk  MCSR-Ranked-Explorer-v1.4.0-debug.apk  MCSR-Ranked-Explorer-v1.4.1-debug.apk  MCSR-Ranked-Explorer-v1.5.0-debug.apk  MCSR-Ranked-Explorer-v1.6.0-debug.apk
mcsr-ranked-app/src/: App.tsx  index.css  main.tsx
slovko/: DESIGN.md  README.md  gradle.properties  settings.gradle.kts
slovko/app/: build.gradle.kts  (+1 more)
voicebridge/: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
voicebridge/.github/workflows/: ci.yml
voicebridge/docs/: DESIGN.md  LATENCY.md  SETUP_WINDOWS.md  TRAINING.md  sentences.txt
voicebridge/scripts/: bootstrap_private_repo.sh  list_devices.py
voicebridge/src/voicebridge/: __init__.py  __main__.py  audio_io.py  cli.py  config.py  converter.py  dsp.py  engine.py  gui.py  record.py  train.py
voicebridge/src/voicebridge/backends/: __init__.py  passthrough.py  rvc.py  seedvc.py
voicebridge/tests/: test_config.py  test_dsp.py  test_engine.py
(+149 files in other folders)
