[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicebridge"
version = "0.1.0"
description = "Real-time AI voice conversion that turns a physical mic into a cloned-voice virtual microphone for games on Windows."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "MRZ-OW" }]
dependencies = [
    "numpy>=1.24,<2.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "PyYAML>=6.0",
    "soxr>=0.3.7",
]

[project.optional-dependencies]
rvc = ["rvc-python>=0.1.5"]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
voicebridge = "voicebridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
